Fix timer text alignment

--- a/code/UI/Styles/timerhud.scss
+++ b/code/UI/Styles/timerhud.scss
@@ -51,6 +51,7 @@ TimerHud {
     font-family: $title-font;
     font-size: 40px;
     text-stroke: 6px #000;
+    text-align: center;
     text-shadow: $text-shadow-black-4;
     justify-content: center;
   }
